--- a/src/static/index.html
+++ b/src/static/index.html
@@ -12,6 +12,8 @@
     />
   </head>
   <body>
+
+
     <header>
       <h1>Mergington High School</h1>
       <h2>Extracurricular Activities</h2>
@@ -28,6 +30,15 @@
         </div>
       </div>
     </header>
+
+    <div id="announcement-banner" class="announcement-banner hidden" role="status" aria-live="polite">
+      <div class="announcement-content">
+        <span id="announcement-text"></span>
+        <button id="dismiss-announcement" type="button" aria-label="Dismiss announcement">
+          Dismiss
+        </button>
+      </div>
+    </div>
 
     <main>
       <section id="activities-container">
