--- a/src/static/index.html
+++ b/src/static/index.html
@@ -13,6 +13,9 @@
   </head>
   <body>
 
+<div class="announcement-banner">
+  📢 Activity registration is open until the end of the month. Don't lose your spot!
+</div>
 
     <header>
       <h1>Mergington High School</h1>
